# HTV

./: .gitignore  BACKEND.md  CLAUDE.md  FRONTEND.md  PLAN.md  README.md  api.md  backend.md  frontend.md  package-lock.json  plan.md
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/llm/: __init__.py  balance.py  chat.py  client.py  prompts.py
backend/services/: __init__.py  analyzer.py  clusterer.py  embedder.py  graph_builder.py  labeler.py  sampler.py  terrain_builder.py  waveform.py
backend/utils/: __init__.py  metrics.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/visualize/: page.tsx
frontend/src/components/: AnimatedHeightMap.tsx  AnimatedScene.tsx  ChatBox.tsx  ClusterDetailModal.tsx  FileUploader.tsx  Header.tsx  LoadingSpinner.tsx  MetricsPanel.tsx  Waveform.tsx  WaveformModeToggle.tsx
frontend/src/components/controls/: ClusterList.tsx  MetricsPanel.tsx
frontend/src/components/upload/: FileUploader.tsx
frontend/src/components/visualization/: Hill.tsx  Stars.tsx  Terrain.tsx  TerrainMap.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDataset.ts  useDrag.ts  useTerrain.ts
frontend/src/lib/: api-client.ts  config.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts  terrain.ts
frontend/src/utils/: userData.txt
