[project]
name = "level-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sentence-transformers>=2.2.0",
    "google-generativeai>=0.3.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart",
    "scipy",
    "python-dotenv",
]
